# MSME-OPENENV

./: README.md  __init__.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py  validate.py
.github/: description.md
.github/workflows/: sync_to_hf.yml
MSME Open env/: .env.example  Dockerfile  inference.py  pyproject.toml  requirements.txt  validate.py
MSME Open env/env/: graders.py  server.py
MSME Open env/server/: __init__.py
env/: environment.py  graders.py  models.py  server.py  tasks.py
server/: app.py
