[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msme-payment-dispute-openenv"
version = "2.0.0"
description = "OpenEnv environment for MSME payment dispute resolution tasks"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.111.0",
	"uvicorn>=0.29.0",
	"pydantic>=2.7.1",
	"openai>=1.30.1",
	"requests>=2.31.0",
	"openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
